Page MenuHome GnuPG

pinentry: Add warning when capslock is on
Closed, ResolvedPublic

Description

You can guess why I open this issue. It happened to me that I really scratched my head trying to figure out which passphrase I used for a key and then I noticed Caps lock was on........

Windows, KDE Plasma and other apps have a warning when capslock is on.

Would be another string though that is passed from gpg-agent to pinentry.

For Qt:
https://stackoverflow.com/questions/2968336/qt-password-field-warn-about-caps-lock

Details

Version
master

Event Timeline

aheinecke added a project: Restricted Project.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Jul 15 2021, 4:26 PM

Implemented for X11 and Windows.

For Wayland we would probably use KWayland (see https://stackoverflow.com/a/58643932). KWayland is a tier 1 KF5 library, i.e. it does not depend on other KF5 libraries.

ikloecker changed the task status from Open to Testing.Jul 26 2021, 3:43 PM
ikloecker reassigned this task from ikloecker to aheinecke.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a subscriber: ikloecker.

@aheinecke Please test this on Windows

ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 25 2021, 11:47 AM

This is in for so long we can mark it as resolved. I had tested it on Windows.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 3:00 PM